@@ -767,3 +767,26 @@ CREATE TABLE autoreg (
   hostid		int(4)		DEFAULT '0' NOT NULL,
   PRIMARY KEY (id)
 ) type=InnoDB;
+
+--
+-- Table structure for table 'valuemaps'
+--
+
+CREATE TABLE valuemaps (
+  valuemapid		int(4)		NOT NULL auto_increment,
+  name			varchar(64)	DEFAULT '' NOT NULL,
+  PRIMARY KEY (valuemapid)
+) type=InnoDB;
+
+--
+-- Table structure for table 'mapping'
+--
+
+CREATE TABLE mappings (
+  mappingid		int(4)		NOT NULL auto_increment,
+  valuemapid		int(4)		DEFAULT '0' NOT NULL,
+  value			varchar(64)	DEFAULT '' NOT NULL,
+  newvalue		varchar(64)	DEFAULT '' NOT NULL,
+  PRIMARY KEY (mappingid),
+  KEY valuemapid (valuemapid)
+) type=InnoDB;
